--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,6 +20,10 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twilio_account_sid: AC6b39652855480a968ba3cad73e97b56c
+  twilio_auth_token: 42d4d59356ee95726caed99fa3bb9053
 
 staging:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twilio_account_sid: AC6b39652855480a968ba3cad73e97b56c
+  twilio_auth_token: 42d4d59356ee95726caed99fa3bb9053
